# RAVEL-VB-beachvolleyball-tracking

./: .gitignore  README.md  README_ru.md  infer_openvino.py  infer_torch.py  main.py  pyproject.toml  requirements.txt
demo/: pro_man_Ahman_Kolb_005_predictions.json
models/: ravel_vb_v1.json  ravel_vb_v1.xml  ravel_vb_v1_seq18.json  ravel_vb_v1_seq18.xml
src/: __init__.py  backbone.py  ball_grid.py  box_ops.py  model.py  postprocess.py
