[project]
name = "tape-vb"
version = "0.1.0"
description = "TAPe-VB volleyball player and ball detector inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "openvino>=2026.2.1",
    "scipy>=1.13",
    "torch>=2.2",
    "tqdm>=4.68.4",
]
